[tool.poetry]
name = "lessonbruce"
version = "0.1.0"
description = ""
authors = ["Michkail <michkail@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"
pbkdf2 = "^1.3"
requests = "^2.31.0"
validate-email = "^1.3"
colored = "^2.2.2"
paramiko = "^3.2.0"
pywifi = "^1.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
